# nonebot-plugin-bfchat

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_bfchat/: __init__.py  bf1.py  bf2042.py  bfv.py  classes_card.html  config.py  help.md  specials_2042card.html  template.html  template.py  template2042.html  utils.py  vehicle_2042card.html  weapon_2042card.html  weapon_card.html
